--- a/extensions/amp-story-auto-ads/0.1/amp-story-auto-ads-cta-button.css
+++ b/extensions/amp-story-auto-ads/0.1/amp-story-auto-ads-cta-button.css
@@ -2,22 +2,16 @@
 
 /* If you are changing anything here that affects font, please update measurer
  in story-ad-button-text-fitter.js */
-.i-amphtml-story-ad-link {
+ .i-amphtml-story-ad-link {
   background-color: #ffffff !important;
-  border-radius: 4em !important;
+  border-radius: 20px !important;
   box-sizing: border-box !important;
   bottom: 32px !important;
   box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.16) !important;
   color: #4285f4 !important;
   font-family: 'Roboto', sans-serif !important;
   font-weight: bold !important;
-  /* dymnamic sizing for text */
-  font-size: clamp(min(15px), 2vmin, max(3vmin)) !important;
-  /* center text on all screen sizes */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: clamp(min(4.5vh), 36px, max(15%)) !important;
+  height: 36px !important;
   letter-spacing: 0.2px !important;
   line-height: 36px !important;
   overflow: hidden !important;
@@ -27,7 +21,8 @@
   position: absolute !important;
   text-align: center !important;
   text-decoration: none !important;
-  width: clamp(min(120px), 40%, max(calc(100vw - 64px)));
+  min-width: 120px !important;
+  max-width: calc(100vw - 64px);
 }
 
 [cta-active].i-amphtml-story-ad-link {
@@ -49,4 +44,3 @@
     transform: scale(1);
   }
 }
-
